Add_HW_7_screen

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@
 # Исключить файлы .c из игнорирования
 !*.c
 !*.h
+!*.jpg
 
 # Также важно не игнорировать папки, иначе Git не сможет пройти к .c-файлам внутри них
 !*/
