--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
-# Игнорировать всё
+﻿# Игнорировать всё
 *
 *.exe
 *.json
 .vscode/*
+*temp*
+*CodeRunner*
+*tmp*
+
 
 # Исключить файлы .c из игнорирования
 !*.c
