--- a/.gitignore
+++ b/.gitignore
@@ -13,13 +13,15 @@
 !*.c
 !*.h
 !*.jpg
+!*.csv
+!makefile
 
 # Также важно не игнорировать папки, иначе Git не сможет пройти к .c-файлам внутри них
 !*/
 
 # Обязательно разрешить сам .gitignore
 !.gitignore
-!makefile
+
 
 .DS_Store/*
 *.DS_Store
