--- a/KursWork_20251222/Temp_info/makefile
+++ b/KursWork_20251222/Temp_info/makefile
@@ -11,6 +11,9 @@ temp_functions.o: temp_functions.c temp_functions.h
 	gcc -c temp_functions.c
 
 clean:
+	rm -f *.o
+	
+clean_all:
 	rm -f *.o temp_info.exe
 
 run: temp_info.exe
