--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@
 !*.jpg
 !*.csv
 !makefile
-!.docx
+#!.docx
 
 # Также важно не игнорировать папки, иначе Git не сможет пройти к .c-файлам внутри них
 !*/
